--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <img class="logo" src="images/logo.png" alt="Travel Agency Logo" >
-        <h1>Dreamy Destinations The Ultimate Travel guide</h1>
+        <h1>Dreamy Destinations </h1>
+        <h2>The Ultimate Travel Guide</h2>
         <nav>
             <a href="index.html">Home</a>
             <a href="destination.html">Destinations</a>
