--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="Travel Agency Logo" >
+        <img class="logo" src="/logo.jpg" alt="Travel Agency Logo" >
         <h1>Dreamy Destinations </h1>
         <h2>The Ultimate Travel Guide</h2>
         <nav>
@@ -18,6 +18,18 @@
             <a href="blog.html">Blogs</a>
         </nav>
     </header>
+
+    <main>
+        <section class="overview">
+            <p>Let's take you round the globe !!</p>
+            <img class="globe" src="/globe.png" alt="Globe" >
+            <p>Come explore the map with us.</p>
+            <p>Having a hard time planning your vacation? We've got your back!</p>
+            <p>Any country right a click away 
+                <br>
+                check our<a href="packages.html"> Packages</a> and <a href="destinations.html">Destinations</a></p>
+        </section>
+    </main>
     
 </body>
 </html>
