--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="logo" src="/logo.jpg" alt="Travel Agency Logo" >
         <h1>Dreamy Destinations </h1>
         <h2>The Ultimate Travel Guide</h2>
-        <nav>
+        <nav class="navibar">
             <a href="index.html">Home</a>
             <a href="destination.html">Destinations</a>
             <a href="package.html">Packages</a>
@@ -27,7 +27,7 @@
             <p>Having a hard time planning your vacation? We've got your back!</p>
             <p>Any country right a click away 
                 <br>
-                check our<a href="packages.html"> Packages</a> and <a href="destinations.html">Destinations</a></p>
+                check our<a href="package.html">Packages</a> and <a href="destination.html">Destinations</a></p>
         </section>
     </main>
     
