--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/logo.jpg" alt="Travel Agency Logo" >
-        <h1>Dreamy Destinations </h1>
-        <h2>The Ultimate Travel Guide</h2>
-        <nav class="navibar">
+        <div class="header-content">
+            <img class="logo" src="/logo.jpg" alt="Travel Agency Logo" >
+            <h1>Dreamy Destinations </h1>
+            <br>
+            <h2>The Ultimate Travel Guide</h2>
+        </div>
+        <nav>
             <a href="index.html">Home</a>
             <a href="destination.html">Destinations</a>
             <a href="package.html">Packages</a>
@@ -21,9 +24,9 @@
 
     <main>
         <section class="overview">
-            <p>Let's take you round the globe !!</p>
+            <h1>Let's take you round the globe !!</h1>
             <img class="globe" src="/globe.png" alt="Globe" >
-            <p>Come explore the map with us.</p>
+            <h2>Come explore the map with us.</h2>
             <p>Having a hard time planning your vacation? We've got your back!</p>
             <p>Any country right a click away 
                 <br>
