--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <main>
         <section class="overview">
             <h1>Let's take you round the globe !!</h1>
-            <img class="globe" src="/globe.png" alt="Globe" >
+            <img class="globe" src="/globe.jpg" alt="Globe" >
             <h2>Come explore the map with us.</h2>
             <p>Having a hard time planning your vacation? We've got your back!</p>
             <p>Any country right a click away 
                 <br>
-                check our<a href="package.html">Packages</a> and <a href="destination.html">Destinations</a></p>
+                check our <a href="package.html">Packages</a> and <a href="destination.html">Destinations</a></p>
         </section>
     </main>
     
