--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img class="logo" src="/logo.jpg" alt="Travel Agency Logo" >
+            <img class="logo" src="logo.jpg" alt="Travel Agency Logo" >
             <h1>Dreamy Destinations </h1>
             <br>
             <h2>The Ultimate Travel Guide</h2>
@@ -25,7 +25,7 @@
     <main>
         <section class="overview">
             <h1>Let's take you round the globe !!</h1>
-            <img class="globe" src="/globe.jpg" alt="Globe" >
+            <img class="globe" src="globe.jpg" alt="Globe" >
             <h2>Come explore the map with us.</h2>
             <p>Having a hard time planning your vacation? We've got your back!</p>
             <p>Any country right a click away 
